Df playground to Production (#51)
* try another way to pass google authenticate

* move tmp.json to the right place

* try another way to pass google authenticate

* scrape data for comp9311

* add context implement and set query with current context

* save context into session

* integration test OK, ready to be merged into production

* add entity implement

* add ml, but not stable which still need to tune the params

* stackexchange api implemented, needed to refine

* revert this commit

* Revert "stackexchange api implemented, needed to refine"

This reverts commit 9e65da61d63eee27d8348b2e366edeca740a5961.

* Revert "Merge branch 'df-playground' of https://github.com/comp3300-comp9900-term-1-2019/capstone-project-czhx into df-playground"

This reverts commit 2d1e3efe6455d374418848f49cdffa1d192fc9b5, reversing
changes made to 9e65da61d63eee27d8348b2e366edeca740a5961.

* Revert "Revert "stackexchange api implemented, needed to refine""

This reverts commit 70e7be4912d91546e95b9e92664ed5ef53f1115b.

* discard changes

* restore ml codes

* add tags client call

* add useful json files

* add code in client

* add response format

* add manager to refine the answer by word2vec matching

* add context

* add preprocess

* add cnn

* glue implementations together and get shit working

* connect word into sentence when returning a result generated by kb

* TODO: fix string bug in bot_manager: match_questions()

* fix bug in bot_manager

* add preprocess for query

* add origin_data

* convert csv

* preprocess forum data

* exchange data name

* fix empty list after preprocess

* reference original questions
