# backend/app/demo/v1/routes.py
@@ -9,6 +9,7 @@
 from __future__ import absolute_import
 
 from .api.auth import Auth
+from .api.welcome import Welcome
 from .api.ask import Ask
 from .api.knowledge_base import KnowledgeBase
 from .api.knowledge_base_KID import KnowledgeBaseKid
@@ -18,6 +19,7 @@ from .api.knowledge_base_KID_document_DID import KnowledgeBaseKidDocumentDid
 
 routes = [
     dict(resource=Auth, urls=['/auth'], endpoint='auth'),
+    dict(resource=Welcome, urls=['/welcome'], endpoint='welcome'),
     dict(resource=Ask, urls=['/ask'], endpoint='ask'),
     dict(resource=KnowledgeBase, urls=['/knowledge_base'], endpoint='knowledge_base'),
     dict(resource=KnowledgeBaseKid, urls=['/knowledge_base/<KID>'], endpoint='knowledge_base_KID'),
