# backend/swagger.yaml
@@ -49,7 +49,20 @@ paths:
                 type: string
                 description: 'token from server'
                 
-                
+  /welcome:
+    get:
+      tags:
+        - 'Communication'
+      summary: 'Trigger welcome event'
+      description: ''
+      produces:
+        - 'application/json'
+      responses:
+        200:
+          description: ''
+          schema:
+            $ref: '#/definitions/TextResponse'
+
   /ask:
     post:
       tags: 
@@ -281,9 +294,13 @@ definitions:
     type: "object"
     required: 
     - "text"
+    - "flag"
     properties:
       text:
         description: "The response to text input"
+        type: "string"
+      flag:
+        description: "response source"
         type: "string"
       # confidence:
       #   description: "The fulfillment detected confidence"
